--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ body {
   align-items: center;
 }
 
-#stage-container {
+#stage-container, #achievement-container {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
